_sass/_sidebar.scss
#side-nav-container {
    position: fixed;
    top: 56px;
    left: 0;
    width: 250px;
    overflow-y: auto;
    height: 100%;
    background: $background-color;
}

.main-contents {
    margin-left: 250px;
    width: inherit;
}

#mysidebar {

    margin: 40px 0 40px 0;

    ul {
    	margin-left: 0;
    	list-style: none;
    }

    li.sidebar-title {
    	margin-bottom: 16px;
    }

    ul.sidebar-items {
    	margin-bottom: 16px;

    	li {
    		font-size: 14px;
    	}

    	i.fa {
    		opacity: 0.5;
    	}
    }
}

#overlay-under-drawer {
    opacity: 0;
    -webkit-transition: opacity 0.5s ease-out;
    transition: opacity 0.5s ease-out;
}

@media screen and (max-width:768px) {

    #side-nav-container {
        position: relative;
    }

    .main-contents {
        margin-left: inherit;
    }

    #sidebar-toggle-button {
        display: inline !important;
    }

    #mysidebar {
        left:-100%;
        position:fixed;
        -webkit-transition: left .5s ease-out;
        transition: left .5s ease-out;
        z-index: 2000;
        top:0;
        width: 280px; /* works all the way down to an iphone 4 */
        height: 100%;
        background: white;
        overflow-y: auto; /* TODO: how to hide scroll bars? */
    }

    #mysidebar.active {
        left:0; /* this animates our drawer into the page */
        padding: 24px;
        margin-top: 0;
    }

    #overlay-under-drawer.active {
        opacity: 0.6;
        height: 100%;
        width: 100%;
        z-index: 1999;
        position: fixed;
        top: 0px;
        left: 0px;
        bottom: 0px;
        right: 0px;
        background-color: black;
        display: block;
    }

}

